# goorm

./: .flake8  .gitignore  main.py  pyproject.toml
.github/workflows/: ci.yaml
env/: pyvenv.cfg
